--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,10 @@
     /* @apply border-border; */
   }
   
+  html, body {
+    overflow-x: hidden;
+  }
+  
   body {
     @apply bg-blue-100 text-gray-900 font-sans;
     font-feature-settings: "rlig" 1, "calt" 1;
